# takeoffs

./: .editorconfig  .env.example  .gitattributes  .gitignore  .npmrc  .prettierignore  CLAUDE.md  Lean_AI_Native_Plan.docx  Lean_Chart_Plan.docx  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml  db-migrate.yml
apps/: README.md
apps/ai-inference/: Dockerfile  README.md  pyproject.toml
apps/ai-inference/app/: __init__.py
apps/ai-inference/app/contracts/: __init__.py  stage_schemas.py
apps/ai-inference/app/serving/: __init__.py  __main__.py  model_registry.py  orchestrator.py  pipeline.py  redis_io.py  worker.py
apps/ai-inference/app/stages/: __init__.py  confidence.py  geometry.py  mapping.py  quantify.py  vectorize.py
apps/ai-inference/tests/: test_orchestrator.py  test_serving.py  test_stage_contracts.py  test_stages.py
apps/web/: README.md  auth.config.ts  auth.ts  drizzle.config.ts  instrumentation.ts  middleware.ts  next.config.ts  package.json  tsconfig.json  turbo.json  vitest.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/(app)/: layout.tsx
apps/web/server/data/: bootstrap-db.ts  client.ts  migrate.ts  neon-check.ts  org-isolation.test.ts  org-scope.ts  seed.ts  verify-app-role.ts
apps/web/server/platform/: api.ts  http-error.ts  queue.ts  (+4 more)
apps/web/types/: next-auth.d.ts
docs/: README.md
docs/adr/: 0001-multi-region-readiness.md  README.md
docs/api-reference/: integration-exports.md
docs/runbooks/: disaster-recovery.md  gpu-compute-home.md  integrations-setup.md  observability.md  vercel-setup.md
docs/security/: pentest-plan.md  security-review.md
infra/: README.md
infra/azure/: README.md  provision.ps1
ml/: README.md  pyproject.toml
ml/takeoff_ml/: __init__.py  pipeline.py
ml/takeoff_ml/datasets/: __init__.py  assembly.py  records.py
ml/takeoff_ml/evaluation/: __init__.py  benchmark.py  metrics.py
ml/takeoff_ml/registry/: __init__.py  candidate.py
ml/takeoff_ml/training/: __init__.py  trainer.py
ml/tests/: test_assembly.py  test_metrics.py  test_pipeline.py
tools/: README.md
tools/local-dev/: README.md  docker-compose.yml
tools/local-dev/initdb/: 01-postgis.sql  02-app-role.sql
(+414 files in other folders)
